--- a/Code/entrepreneurship_southwest_ohio.Rmd
+++ b/Code/entrepreneurship_southwest_ohio.Rmd
@@ -55,7 +55,8 @@ p_load(httr, rvest,
        readxl, tidyverse, RColorBrewer,
        tools, DT, formattable,
        gsubfn, anytime, magrittr, 
-       domaintools, wayback)
+       domaintools, wayback,
+       lubridate, dplyr, geojsonio)
 
 ```
 
@@ -258,6 +259,127 @@ out_file.close()
 in_file.close()
 ```
 
-## Momentos (TBC)
-The next step we will explore getting the content of the pages using the ```get_memento()``` function in **R** or the [waybackpack](https://github.com/jsvine/waybackpack) in Python.
+
+## Expoloratory Data Analysis on Number of Changes
+```{r eda_changes, cache=TRUE}
+# Reading the file from the previous chunk
+eda_numchanges <- read.csv("../Data/records_unique.csv", stringsAsFactors = F)
+
+eda_numchanges[,2] <- as.character(eda_numchanges[,2]) %>% 
+  str_pad(pad="0", side="left", width=5)
+
+# Summarizing Information by Year
+eda_numchanges$formatted_CreateDate <- as.Date(eda_numchanges[,4]) %>% format("%Y")
+eda_numchanges$formatted_ExpiresDate <- as.Date(eda_numchanges[,5]) %>% format("%Y")
+
+
+eda_numchanges <- na.omit(eda_numchanges)
+eda_numchanges[,c(2,7)] %>% 
+  group_by(post_code, formatted_CreateDate) %>% 
+  summarise(frequency =n()) %>% datatable()
+
+```
+
+
+# Categorizing the (Functioning) Websites Using the Web Shrinker API
+As a next step, we now attempt to categorize the websites. To categorize the websites, we decided to utilize an online commerical platform for the categorization. We decided to use the [Web Shrinker API](https://docs.webshrinker.com/v3/website-category-api.html#website-category-api-introduction) since: 
+
+(a) The Web Shrinker Category API gets and downloads the content of a given *URL* prior to categorizing it to one of [42 categories](https://docs.webshrinker.com/v3/web-shrinker-categories.html#categories).
+(b) Provided more accurate results when compared to the [Website Categorization API from WhoisEXMLAPI](https://website-categorization-api.whoisxmlapi.com/api/) in our initial experiments. 
+(c) The API is relatively cheap; $20 allows for 30,000 URL/domain name queries
+
+```{python webshrinker, eval=F}
+import requests 
+from bs4 import BeautifulSoup 
+import unirest
+
+
+with open('../Data/wayback_changes.csv','r') as in_file, open('../Data/webshrinker.csv','w') as out_file, open('../Data/webshrinker_error.csv','w') as out_file1:
+##        out_file.write("scrape_date, post_code, url, created_date, expired_date, company_name,num_change, wayback_URLs, Category1.Confidence, Category1.Score, Category1.ID, Category1.ParentID, Category1.Label, Category2.Confidence, Category2.Score, Category2.ID, Category2.ParentID, Category2.Label, Category3.Confidence, Category3.Score, Category3.ID, Category3.ParentID, Category3.Label, Category4.Confidence, Category4.Score, Category4.ID, Category4.ParentID, Category4.Label \n")
+##        out_file1.write("url, Error\n")
+    for line in in_file:
+        
+        if line.startswith("scrape_date"):
+            continue
+        
+##            num_changes = int(line.split(",")[3])
+##            if num_changes == 0:
+##                contine
+        
+        url = "http://www." + line.split(",")[2]
+        print(url)
+       
+        #open with GET method
+        try:
+          
+            resp=requests.get(url, timeout = 30)
+            
+            
+            #http_respone 200 means OK status 
+            if resp.status_code==200:
+
+
+                try:
+                    from urllib import urlencode
+                except ImportError:
+                    from urllib.parse import urlencode
+
+                from base64 import urlsafe_b64encode
+                import hashlib
+                import json
+
+                def webshrinker_categories_v3(access_key, secret_key, url=b"", params={}):
+                    params['key'] = access_key
+
+                    request = "categories/v3/{}?{}".format(urlsafe_b64encode(url).decode('utf-8'), urlencode(params, True))
+                    request_to_sign = "{}:{}".format(secret_key, request).encode('utf-8')
+                    signed_request = hashlib.md5(request_to_sign).hexdigest()
+
+                    return "https://api.webshrinker.com/{}&hash={}".format(request, signed_request)
+
+                access_key = "REf91OgMabbUZTmONupg"
+                secret_key = "ZOHNa2dSBvDwpg38QqC0"
+
+                api_url = webshrinker_categories_v3(access_key, secret_key, url)
+                response = requests.get(api_url)
+
+                status_code = response.status_code
+                data = response.json()
+
+                print(status_code)
+                if status_code == 200:
+                    # Do something with the JSON response
+                   # print(json.dumps(data, indent=4, sort_keys=True))
+                    #categories = ""
+                    out_file.write(line.strip() + ",")
+                    for category in data['data'][0]['categories']:
+                        out_file.write(str(category['confident']) + "," + str(category['score']) +"," + str(category['id']) +"," + str(category['parent']) + "," + category['label']+ ",") 
+                    out_file.write("\n")
+                elif status_code == 202:
+                    # The website is being visited and the categories will be updated shortly
+##                        print(json.dumps(data, indent=4, sort_keys=True))
+                    out_file1.write(url + ",uncategorized\n") 
+                elif status_code == 400:
+                    # Bad or malformed HTTP request
+                    out_file1.write(url + ",Bad or malformed HTTP request\n")
+                elif status_code == 401:
+                    # Unauthorized
+                    out_file1.write(url + ",Unauthorized - check your access and secret key permissions\n")
+                elif status_code == 402:
+                    # Request limit reached
+                    print("Account request limit reached")
+                    print(json.dumps(data, indent=4, sort_keys=True))
+                else:
+                    # General error occurred
+                    print("A general error occurred, try the request again")
+            else:
+                out_file1.write(url + ", " + str(resp.status_code) + "\n")
+                
+        except requests.exceptions.RequestException as e:  # This is the correct syntax
+            out_file1.write(url + "," + str(e).replace(",", ";") + "\n")
+            
+out_file.close()
+out_file1.close()
+in_file.close()
+```
 
