--- a/Code/entrepreneurship_southwest_ohio.Rmd
+++ b/Code/entrepreneurship_southwest_ohio.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Understanding and Quantifying Impactful Research Published in JQT"
+title: "Examining Entrepreneurship in Southwestern Ohio: An Internet Based Perspective"
 date:  "`r format(Sys.time(), '%B %d, %Y')`"
 author:
   - name: "Greg Niemesh ^[Email: niemesgt@miamioh.edu | Phone: +1-513-529-42150 | Website: <a href=\"https://miamioh.edu/fsb/directory/?up=/directory/niemesgt\">Miami University Official</a> ]"
@@ -201,7 +201,7 @@ records_file.close()
 Based on Section (1), we know have the domain names for approximately 131,723 websites that are registered under one of the zip codes corresponding to the counties we explored. In this section, we will explore how each of these domains have changed over time using information from the [Wayback Machine API](https://web.archive.org/). Specifically, we can obtain the number of unique archives for a given webpage using the [waybackpack](https://github.com/jsvine/waybackpack) python-based package for the Wayback Machine API.
 
 ## Number of Changes and Archived URLs
-As a first step to understanding the domain histories, we capitalized on the [waybackpack](https://github.com/jsvine/waybackpack) to obtain the number of changes for given hostname and the archieved URLs corresponding to unique pages. *For now, we are hypothesizing that the number of changes correspond to growth/economic activity.* **Obviously, we can parse the changes to obtain changes per year or month (we will do this in a future time).** The results from this analysis step are stored in: []()
+As a first step to understanding the domain histories, we capitalized on the [waybackpack](https://github.com/jsvine/waybackpack) to obtain the number of changes for given hostname and the archieved URLs corresponding to unique pages. *For now, we are hypothesizing that the number of changes correspond to growth/economic activity.* **Obviously, we can parse the changes to obtain changes per year or month (we will do this in a future time).** The results from this analysis step are stored in: [wayback_changes.csv](https://github.com/fmegahed/entrepreneurship-in-southwest-ohio/blob/master/Data/wayback_changes.csv).
 ```{python num_changes, eval=F}
 # In this next block of code, we do the following:
 # (A) Open the records.csv file from the previous chunk
@@ -288,6 +288,7 @@ As a next step, we now attempt to categorize the websites. To categorize the web
 (b) Provided more accurate results when compared to the [Website Categorization API from WhoisEXMLAPI](https://website-categorization-api.whoisxmlapi.com/api/) in our initial experiments. 
 (c) The API is relatively cheap; $20 allows for 30,000 URL/domain name queries
 
+From the Web Shrinker API, we were able to categorize over 1,100 domains (see [webshrinker.csv](https://github.com/fmegahed/entrepreneurship-in-southwest-ohio/blob/master/Data/webshrinker.csv) for details). The remaining URLs, which were not categorized, were primarily due to the URL expiring, which means that the page cannot be opened and downloaded for further analysis. Note that we have tried using the web archive link for categorization in the Web Shrinker API (i.e. by using the url from the [wayback_changes.csv](https://github.com/fmegahed/entrepreneurship-in-southwest-ohio/blob/master/Data/wayback_changes.csv)) as input to the Python code below, however the results were not satisfactory. We believe that this is due to the structure of the Wayback Machine HTML pages. To examine the errors obtained from the Web Shrinker API, please see [webshrinker_error.csv](https://github.com/fmegahed/entrepreneurship-in-southwest-ohio/blob/master/Data/webshrinker_error.csv).
 ```{python webshrinker, eval=F}
 import requests 
 from bs4 import BeautifulSoup 
@@ -383,3 +384,107 @@ out_file1.close()
 in_file.close()
 ```
 
+# Transforming Webshrinker and Wayback Machine Data to a Longitudinal Panel
+Since our end goal is to examine how the number of unique changes of websites in a given category correlate with economic activity, we used Python to transform the outputs from the previous sections into a panel-like CSV. The code chunk explains our thought process and the output can be downloaded from[website_change_panel_v01.csv](https://github.com/fmegahed/entrepreneurship-in-southwest-ohio/blob/master/Data/website_change_panel_v01.csv).
+```{python web_changes_panel, eval=F}
+import requests 
+from bs4 import BeautifulSoup 
+import unirest
+
+start_year = 1996
+end_year = 2021
+
+def title(): 
+    # the target we want to open   
+
+    urls_visted = set()
+    
+    with open('../Data/webshrinker.csv','r') as in_file, open('../Data/website_change_panel_v01.csv','w') as out_file:
+        out_file.write("scrape_date, ZIP, url, created_date, expired_date, company_name, TAG_category, category1_confidence, category1_score, category1_ID, category1_parentID, category1_label, category2_confidence, category2_score, category2_ID, category2_parentID, category2_label, wayback_URLs, num_changes, " + ', '.join(["changes_in_"+str(i) for i in range(start_year, end_year)]) + "\n")
+        
+        for line in in_file:
+            
+            if line.startswith("scrape_date"):
+                continue
+
+            line_col = line.split(",")
+            urls_visted.add(line_col[2])
+            
+            for i in range(6):
+                out_file.write(line_col[i] + ",")
+
+            TAG_category = "Category exists"
+            if line_col[12] == "Uncategorized" or line_col[17] == "Under Construction":
+                TAG_category = "Uncategorized or Under Construction"
+            out_file.write(TAG_category + ",")
+
+            for i in range(8, 18):
+                out_file.write(line_col[i] + ",")
+
+
+            wayback_urls = line_col[7]
+            num_changes = int(line_col[6])
+            out_file.write(wayback_urls + "," + str(num_changes) +",")
+
+            if num_changes > 0:
+                wayback_urls_list = wayback_urls.split(";")
+                
+
+                count = [0] * (end_year - start_year)
+                for i in range(num_changes):
+                    url = wayback_urls_list[i]                    
+                    year = int(url.split("/")[4][0:4])
+                    count[year - start_year] += 1
+
+                out_file.write(', '.join(str(x) for x in count))
+                
+            out_file.write("\n")
+
+    out_file.close()
+    in_file.close()
+
+
+
+    with open('../Data/wayback_changes.csv','r') as in_file, open('../Data/website_change_panel_v01.csv','a') as out_file:
+        for line in in_file:
+            
+            if line.startswith("scrape_date"):
+                continue
+
+            line_col = line.split(",")
+            
+            if line_col[2] in urls_visted:
+                continue
+
+            for i in range(6):
+                out_file.write(line_col[i] + ",")
+
+            out_file.write("Webshrinker Error,")
+
+            for i in range(8, 18):
+                out_file.write(",")
+
+            wayback_urls = line_col[7].strip()
+            num_changes = int(line_col[6])
+            out_file.write(wayback_urls + "," + str(num_changes) +",")
+
+            if num_changes > 0:
+                wayback_urls_list = wayback_urls.split(";")
+                
+
+                count = [0] * (end_year - start_year)
+                for i in range(num_changes):
+                    url = wayback_urls_list[i]                    
+                    year = int(url.split("/")[4][0:4])
+                    count[year - start_year] += 1
+
+                out_file.write(', '.join(str(x) for x in count))
+                
+            out_file.write("\n")
+
+    out_file.close()
+    in_file.close()
+                
+
+title()
+```
